--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "clean-css": ">=4.1.11",
+    "compass": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
