--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "compass": "^0.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
