--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "compass": "^0.1.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
