--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
+    "@testing-library/react": "^8.0.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "compass": "^0.1.1",
@@ -14,6 +15,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint-plugin-react-hooks": "^1.6.0",
     "jest": "^24.7.1",
+    "jest-dom": "^3.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
