Made admin menu button general and called it forward back button.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}\\api\\bin\\www"
+      "program": "${workspaceFolder}\\client\\node_modules\\.bin\\jest"
     }
   ]
 }
