--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "3.0.1",
     "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54"
   },
