Refactored LogoutButton, fixed warnings

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-mock-router": "^1.0.15",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
+    "react-router-prop-types": "^1.0.4",
     "react-scripts": "3.0.1",
     "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1",
