--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.14",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
