--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.3.1",
     "compass": "^0.1.1",
     "docz": "^1.2.0",
+    "docz-plugin-css": "^0.11.0",
     "docz-theme-default": "^1.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
