--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "^3.0.1",
     "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1",
+    "redux-devtools": "^3.5.0",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.14",
